welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: illegal start of simple expression
	while (!croisement());
                             ^Poucet:15: error: 'while' expected but 'if' found.
	if (compteur <=2){
        ^Poucet:26: error: '(' expected but '}' found.
	}
        ^